--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@madzadev/audio-player": "^2.1.14",
     "antd": "^5.21.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
