--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "rc-util": "^5.43.0",
     "react": "^18",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18",
