--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.21.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "geopattern": "^1.2.3",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "rc-util": "^5.43.0",
@@ -26,6 +27,7 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/geopattern": "^1.2.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
