--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "antd": "^5.21.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "geopattern": "^1.2.3",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "pino-pretty": "^11.3.0",
     "rc-util": "^5.43.0",
     "react": "^18",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.63.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
